# src/main/java/com/pragma/powerup/domain/spi/IOwnerValidationPort.java
@@ -1,0 +1,5 @@
+package com.pragma.powerup.domain.spi;
+
+public interface IOwnerValidationPort {
+    void validateOwnership(Long restaurantId);
+}
